--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ a:focus { text-decoration: none; color: var(--tertiary-color); border-bottom: 3p
 .dark-theme a:hover { border-bottom: 1px var(--secondary-color) solid; text-decoration: none; color: var(--tertiary-color); background: #ffeff4; }
 .dark-theme a:focus { text-decoration: none; color: var(--primary-color); border-bottom: 3px #1aa4b9 solid; color: var(--tertiary-color); background: #ffeff4; }
 .dark-theme #toggleBtn { color: var(--primary-color-override); }
-ul { padding-left: 20px; }
+ul { padding-left: 20px; list-style: circle; }
 a[target="_blank"]:after { font-family: "Font Awesome 5 Free"; font-weight: bold; content:"\f35d"; padding-left: .5rem; }
 
 /* Columns */
@@ -57,7 +57,7 @@ section:nth-child(even) { background: var(--highlight); }
 .highlight { background: var(--primary-color); color: var(--highlight); padding: 0 .5rem; display: inline-block; border-radius: 3px; }
 .bar { margin-bottom: 1.2rem; }
 .col-complementary p { margin-bottom: .2rem; }
-.col-complementary ul { list-style: circle; padding-left: 1.25rem; margin: 0 0 2rem; }
+.col-complementary ul { padding-left: 1.25rem; margin: 0 0 2rem; }
 .col-complementary h4 { margin-bottom: .5rem; }
 .meter { border-radius: 3px; background: var(--primary-color); height:.7rem; display: block; }
 .dark-theme a.top { color: var(--primary-color-override);  border:0; display: none; position: fixed; bottom: 0; right: 10%; z-index: 2; background-color: var(--secondary-color);  padding: 1rem; border-bottom:0; border-radius: 3px 3px 0 0; }
